fixed alignment of image sliders

--- a/Sami-Pages-Rails/app/assets/stylesheets/custom.scss
+++ b/Sami-Pages-Rails/app/assets/stylesheets/custom.scss
@@ -207,6 +207,8 @@ padding-left:5px;
 .slider-container {
   width: 400px;
   text-align: left;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .slider {
